--- a/.env
+++ b/.env
@@ -31,10 +31,10 @@ app.baseURL = 'http://172.16.15.25/farmasi'
 # DATABASE
 #--------------------------------------------------------------------
 
-database.default.hostname = 192.168.0.69
+database.default.hostname = 
 database.default.database = simrs
 database.default.username = simrs
-database.default.password = Edp@dmin3dp_69
+database.default.password = 
 database.default.DBDriver = MySQLi
 database.default.DBPrefix =
 database.default.port = 3306
