--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ CI_ENVIRONMENT = production
 # APP
 #--------------------------------------------------------------------
 
-app.baseURL = 'http://172.16.15.25/farmasi'
+app.baseURL = 'http://localhost/farmasi'
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
